--- a/package.json
+++ b/package.json
@@ -23,18 +23,24 @@
   "devDependencies": {
     "@eslint/compat": "^1.0.1",
     "@eslint/js": "^9.3.0",
+    "@types/node": "^20.12.12",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "autoprefixer": "^10.4.19",
     "eslint": "9.x",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "globals": "^15.3.0",
     "husky": "^9.0.11",
+    "postcss": "^8.4.38",
     "prettier": "^3.0.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.3.3",
     "typescript-eslint": "^7.10.0",
     "vite": "^4.4.4"
