--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.3.3",
     "typescript-eslint": "^7.10.0",
-    "vite": "^4.4.4"
+    "vite": "^4.4.4",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
