--- a/package.json
+++ b/package.json
@@ -15,15 +15,23 @@
     "@mysten/sui.js": "0.54.1",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/themes": "^2.0.0",
     "@tanstack/react-query": "^5.0.0",
+    "bignumber.js": "^9.1.2",
+    "copy-to-clipboard": "^3.3.3",
+    "framer-motion": "^11.2.5",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "virtua": "^0.31.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.0.1",
     "@eslint/js": "^9.3.0",
     "@types/node": "^20.12.12",
+    "@types/numeral": "^2.0.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
