--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint ./src --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint ./src --report-unused-disable-directives",
     "preview": "vite preview",
     "prepare": "husky"
   },
   "dependencies": {
+    "@bicarus/utils": "^0.0.9-alpha.0",
     "@mysten/dapp-kit": "0.13.2",
     "@mysten/sui.js": "0.54.1",
     "@radix-ui/colors": "^3.0.0",
@@ -22,7 +23,7 @@
     "bignumber.js": "^9.1.2",
     "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^11.2.5",
-    "numeral": "^2.0.6",
+    "jotai": "^2.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "virtua": "^0.31.0"
@@ -31,7 +32,6 @@
     "@eslint/compat": "^1.0.1",
     "@eslint/js": "^9.3.0",
     "@types/node": "^20.12.12",
-    "@types/numeral": "^2.0.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
