--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mysten/dapp-kit": "0.13.2",
     "@mysten/sui.js": "0.54.1",
     "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-scroll-area": "^1.0.5",
@@ -52,6 +53,7 @@
     "typescript": "^5.3.3",
     "typescript-eslint": "^7.10.0",
     "vite": "^4.4.4",
+    "vite-plugin-require": "^1.2.14",
     "vite-plugin-svgr": "^4.2.0"
   }
 }
