--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^11.2.5",
     "jotai": "^2.8.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "use-debounce": "^10.0.0",
     "virtua": "^0.31.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.0.1",
     "@eslint/js": "^9.3.0",
+    "@types/lodash": "^4.17.4",
     "@types/node": "^20.12.12",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
