--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mysten/dapp-kit": "0.13.2",
     "@mysten/sui.js": "0.54.1",
     "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@radix-ui/themes": "^2.0.0",
     "@tanstack/react-query": "^5.0.0",
     "bignumber.js": "^9.1.2",
