--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "cSpell.words": ["bignumber", "denormalize", "twmerge"]
+  "cSpell.words": ["bignumber", "denormalize", "twmerge"],
+  "eslint.options": {
+    "experimental": {
+      "useFlatConfig": true
+    }
+  }
 }
