--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^11.2.5",
     "jotai": "^2.8.1",
+    "kriya-dex-sdk": "^1.1.69",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
